--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "webpack": "^5.75.0"
   }
 }
