--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "framer-motion": "^7.6.19",
+    "modal-video": "^2.4.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-cookie": "^4.1.1",
@@ -27,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod": "npm run-script build && serve build"
   },
   "eslintConfig": {
     "extends": [
