--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.6.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.6.0",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.3",
