--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "teamm11esports-bali-v1.0.1",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,12 +9,14 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^7.6.19",
     "modal-video": "^2.4.8",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-icons": "^4.6.0",
+    "react-modal-video": "^2.0.0",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
